objects/Apttus_WebStore__Storefront__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_WebStore__AssetActions__c</fullName>
        <description>Asset actions enabled for the Storefront</description>
        <inlineHelpText>Asset actions enabled for the Storefront</inlineHelpText>
        <label>Asset Actions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Apttus_WebStore__EnableABO__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buy More</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_WebStore__DefaultAccountforGuestUsers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account used as default account for orders placed by guest users from E-Commerce</description>
        <inlineHelpText>Account used as default account for orders placed by guest users from E-Commerce</inlineHelpText>
        <label>Default Account for Guest Users</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Storefronts (Default Guest Account)</relationshipLabel>
        <relationshipName>StorefrontsDefaultGuestAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_WebStore__DefaultLocale__c</fullName>
        <description>Default locale for users in the Storefront</description>
        <inlineHelpText>Default locale for users in the Storefront</inlineHelpText>
        <label>Default Locale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en-US</fullName>
                    <default>true</default>
                    <label>en-US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_WebStore__DefaultPriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default price list used for guest users in the Storefront</description>
        <inlineHelpText>Default price list used for guest users in the storefront.</inlineHelpText>
        <label>Default Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Storefronts</relationshipLabel>
        <relationshipName>Storefronts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_WebStore__EnableABO__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Feature flag to enable ABO capabilities for the Storefront</description>
        <inlineHelpText>Feature flag to enable ABO capabilities for the Storefront</inlineHelpText>
        <label>Enable ABO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_WebStore__EnablePromotions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Feature flag to enable Promotions capabilities for the Storefront</description>
        <inlineHelpText>Feature flag to enable Promotions capabilities for the Storefront</inlineHelpText>
        <label>Enable Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_WebStore__EnableRequestQuote__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Feature flag to enable request quote capabilities for the Storefront</description>
        <inlineHelpText>Feature flag to enable request quote capabilities for the Storefront</inlineHelpText>
        <label>Enable Request Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_WebStore__EnableTaxCalculations__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Feature flag to enable Tax calculation capabilities for the Storefront</description>
        <inlineHelpText>Feature flag to enable Tax calculation capabilities for the Storefront</inlineHelpText>
        <label>Enable Tax Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_WebStore__Logo__c</fullName>
        <description>Attachment Id or URL to logo used in the digital commerce storefront</description>
        <inlineHelpText>Attachment Id or URL to logo used in the digital commerce storefront</inlineHelpText>
        <label>Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_WebStore__TranslationURL__c</fullName>
        <description>address to retrive the translation of custom lables for store front</description>
        <inlineHelpText>address to retrive the translation of custom lables for store front</inlineHelpText>
        <label>Translation URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Storefront</label>
    <listViews>
        <fullName>Apttus_WebStore__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Storefront Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storefronts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>